[package]
name = "headlessui-sycamore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = { git = "https://github.com/sycamore-rs/sycamore.git" }
sycamore-utils = { git = "https://github.com/wingertge/sycamore-utils.git" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["KeyboardEvent", "HtmlElement", "Selection", "AddEventListenerOptions"] }
gloo-timers = "0.2"

[dev-dependencies]
sycamore = { git = "https://github.com/sycamore-rs/sycamore.git", features = ["ssr"] }
fantoccini = "0.19"
serde_json = "1"
tokio = "1"

[workspace]
resolver = "2"
members = [
    ".",
    "test-utils",

    # Examples
    "examples/.base",
    "examples/combobox",
    "examples/listbox",
    "examples/checkbox",
]