[dependencies]
gloo-timers = "0.2"
wasm-bindgen = "0.2"

[dependencies.sycamore]
git = "https://github.com/sycamore-rs/sycamore.git"
# path = "../sycamore/packages/sycamore"

[dependencies.sycamore-utils]
git = "https://github.com/wingertge/sycamore-utils.git"

[dependencies.web-sys]
features = ["KeyboardEvent", "HtmlElement", "Selection", "AddEventListenerOptions"]
version = "0.3"

[dev-dependencies]
fantoccini = "0.19"
serde_json = "1"
tokio = "1"

[dev-dependencies.sycamore]
features = ["ssr"]
git = "https://github.com/sycamore-rs/sycamore.git"
# path = "../sycamore/packages/sycamore"

[package]
edition = "2021"
name = "headlessui-sycamore"
version = "0.1.0"

[workspace]
members = [".", "test-utils", "examples/.base", "examples/combobox", "examples/listbox", "examples/checkbox", "examples/dialog", "examples/dyn-view-bug", "examples/disclosure"]
resolver = "2"
