[dependencies]
gloo-timers = "0.2"
wasm-bindgen = "0.2"

[dependencies.sycamore]
git = "https://github.com/sycamore-rs/sycamore.git"

[dependencies.sycamore-utils]
git = "https://github.com/wingertge/sycamore-utils.git"

[dependencies.web-sys]
features = ["KeyboardEvent", "HtmlElement", "Selection", "AddEventListenerOptions"]
version = "0.3"

[dev-dependencies]
serde_json = "1"
wasm-bindgen-test = "0.3"

[dev-dependencies.sycamore]
features = ["ssr"]
git = "https://github.com/sycamore-rs/sycamore.git"

[dev-dependencies.test-utils]
path = "test-utils"

[dev-dependencies.web-sys]
features = ["KeyboardEvent", "KeyboardEventInit", "HtmlElement", "Selection"]
version = "0.3"

[package]
edition = "2021"
name = "headlessui-sycamore"
version = "0.1.0"

[workspace]
members = [".", "test-utils", "examples/.base", "examples/combobox", "examples/listbox", "examples/checkbox", "examples/dialog", "examples/dyn-view-bug", "examples/disclosure", "examples/menu", "examples/popover", "examples/radio-group"]
resolver = "2"
