[package]
name = "example-combobox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = { git = "https://github.com/sycamore-rs/sycamore.git" }
headlessui-sycamore = { path = "../.." }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
fantoccini = "0.19"
test-utils = { path = "../../test-utils" }
serde_json = "1"