[dependencies]
console_error_panic_hook = "0.1"
log = "0.4"
wasm-logger = "0.2"

[dependencies.headlessui-sycamore]
path = "../.."

[dependencies.sycamore]
#path = "../../../sycamore/packages/sycamore"
git = "https://github.com/sycamore-rs/sycamore.git"
features = ["suspense"]

[package]
edition = "2021"
name = "example-dyn-view-bug"
version = "0.1.0"
