[dependencies]
console_error_panic_hook = "0.1"

[dependencies.headlessui-sycamore]
path = "../.."

[dependencies.sycamore]
git = "https://github.com/sycamore-rs/sycamore.git"

[dev-dependencies]
fantoccini = "0.19"
serde_json = "1"

[dev-dependencies.test-utils]
path = "../../test-utils"

[dev-dependencies.tokio]
features = ["macros", "rt"]
version = "1"

[package]
edition = "2021"
name = "example-tabs"
version = "0.1.0"
